# PyHub

./: .gitattributes  .gitignore  LICENSE  README.md  calculator.py  dat.py  main.py  pyproject.toml  requirements.txt  requirements_gen.py  run.cmd
.github/: CONTRIBUTING.md  SUPPORT.md  labeler.yml
.github/workflows/: codeql.yml  stale.yml
features/: calculator.py
features/CrossWordGen/: README.md  crossword.cpp  index.html  launcher.py
features/GameHub/: games.py
features/GameHub/games/: snowrider.html
features/GameHub/games/pong/: README.md  index.html  launcher.py  pong.cpp
features/GameHub/games/snake/: launcher.py  snake.py
features/GameHub/games/snowriderscriptandstyles/: style.css
features/GradeApp/: README  __err__.py  grading.java  launcher.py
features/GradeApp/lib/: NOTICE
features/PassGen/: passgen.py
features/PySpelling/: credits.md  dictionary.py
features/cStats/: README.md  Stats.cs  project.csproj
features/music/: elevator-music-jazz-lounge-elevator-music-332339-license.txt
